--- a/Notebooks/Notebook 2: Latent Feature Space with Clustering.ipynb
+++ b/Notebooks/Notebook 2: Latent Feature Space with Clustering.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "Notebook 2: Latent Feature Space with Clustering.ipynbimport pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.datasets import load_wine\n",
     "from sklearn.preprocessing import StandardScaler\n",
