--- a/Notebooks/Notebook 5: Multiple Realizations_Anis.ipynb
+++ b/Notebooks/Notebook 5: Multiple Realizations_Anis.ipynb
@@ -48,6 +48,8 @@
     "import matplotlib.gridspec as gridspec\n",
     "from scipy.stats import gaussian_kde\n",
     "\n",
+    "import h5py\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim"
@@ -520,6 +522,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "The modified_stress function is more about comparing the embeddings point-by-point, while the adjusted_stress function is about comparing the overall structure of the embeddings."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -704,11 +715,12 @@
    ],
    "source": [
     "initial_seed = 0 # starting sequence for random seed generator\n",
-    "step_size = 10   # Change this to increase seeds every x units\n",
+    "step_size = 10   # Change this to increase seeds every x units as needed\n",
     "random.seed(initial_seed)\n",
     "num_seeds = 6 # 20 # 1000 # nos of realizations needed\n",
     "seed_values = [initial_seed + (step_size * i) for i in range(num_seeds)]\n",
     "cluster_changes = np.zeros_like(target)  # To track changes in cluster assignments\n",
+    "change_percentages = []  # List to store percentage of changed clusters for each realization\n",
     "statistics_array = np.empty((num_seeds, 7))\n",
     "pvalues_array = np.empty((num_seeds, 3))\n",
     "convexhull_array = np.empty((num_seeds, 3))\n",
@@ -716,14 +728,15 @@
     "convex_hull_vertices = []\n",
     "all_loss_curves = []\n",
     "local_anisotropies = []\n",
+    "hdf5_file = 'embedding_realizations.h5' # store each latent space for all AE realizations here\n",
     "\n",
-    "# Create a 3x3 grid for visualizations\n",
+    "# Make the HDF5 file\n",
+    "with h5py.File(hdf5_file, 'w') as f:\n",
+    "    pass  # Just to create the file\n",
+    "\n",
+    "# Make 3x3 subplot for 6 randomly selected AE realizations visualizations\n",
     "fig, axs = plt.subplots(2, 3, figsize=(15, 10))\n",
     "axs = axs.ravel()\n",
-    "\n",
-    "change_percentages = []  # List to store percentage of changed clusters for each realization\n",
-    "\n",
-    "# Randomly select 6 realizations for visualization\n",
     "random.seed(initial_seed)\n",
     "visualization_indices = random.sample(range(num_seeds), 6)\n",
     "\n",
@@ -778,6 +791,10 @@
     "        encoded_data = torch.cat(encoded_data, dim=0).numpy()\n",
     "        order = np.argsort(original_indices)\n",
     "        encoded_data = encoded_data[order]\n",
+    "\n",
+    "        # Save each latent space embeddings to an HDF5 file\n",
+    "        with h5py.File(hdf5_file, 'a') as f:\n",
+    "            f.create_dataset(f'embedding_realizations_{idx}', data=encoded_data)\n",
     "\n",
     "\n",
     "################################################ SELF NOTE #############################################################################################################\n",
@@ -861,18 +878,6 @@
     "\n",
     "    # Save and store anisotropy attributes to numpy files or whatever format as needed\n",
     "    np.save('anisotropy_array.npy', anisotropy_array)\n",
-    "\n",
-    "    # Compute modified and adjusted stressese\n",
-    "    # INSERT TODO\n",
-    "\n",
-    "    # Save and store to file or whatever format as needed\n",
-    "    # INSERT TODO\n",
-    "\n",
-    "\n",
-    "################################################ SELF NOTE #############################################################################################################\n",
-    "# The modified_stress function is more about comparing the embeddings point-by-point, while the adjusted_stress function is about comparing the overall structure of the embeddings.\n",
-    "########################################################################################################################################################################\n",
-    "\n",
     "\n",
     "    # Check if the current realization index is in the list of visualization_indices\n",
     "    if idx in visualization_indices:\n",
@@ -1214,7 +1219,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Stress Computation"
+    "## Stress Computations"
    ],
    "metadata": {
     "collapsed": false
@@ -1226,19 +1231,25 @@
    "outputs": [],
    "source": [
     "# Stress computation for unique pairs only\n",
-    "list_of_embeddings = [embeddings_autoencoder1, embeddings_autoencoder2, ...] # Add all embeddings here\n",
+    "with h5py.File(hdf5_file, 'r') as f:\n",
+    "    N = len(f.keys())\n",
+    "    # Initialize matrices\n",
+    "    adjusted_stress_matrix = np.zeros((N, N))\n",
+    "    modified_stress_matrix = np.zeros((N, N))\n",
     "\n",
-    "# Initialize a square matrix to store the stress values\n",
-    "N = len(list_of_embeddings)\n",
-    "adjusted_stress_matrix = np.zeros((N, N))\n",
-    "modified_stress_matrix = np.zeros((N, N))\n",
+    "    for i in range(N):\n",
+    "        embedding_i = f[f'embedding_realizations_{i}'][:]\n",
+    "        for j in range(i + 1, N):  # Starting from i + 1 to avoid redundant computations\n",
+    "            embedding_j = f[f'embedding_realizations_{j}'][:]\n",
+    "            # Compute adjusted stress\n",
+    "            adj_stress = adjusted_stress(embedding_i, embedding_j)\n",
+    "            adjusted_stress_matrix[i, j] = adj_stress\n",
+    "            adjusted_stress_matrix[j, i] = adj_stress\n",
     "\n",
-    "for i in range(N):\n",
-    "    for j in range(i + 1, N):  # Starting from i + 1 to avoid redundant computations\n",
-    "        # Compute adjusted stress\n",
-    "        adj_stress = adjusted_stress(list_of_embeddings[i], list_of_embeddings[j])\n",
-    "        adjusted_stress_matrix[i, j] = adj_stress\n",
-    "        adjusted_stress_matrix[j, i] = adj_stress\n"
+    "            # Compute modified stress\n",
+    "            mod_stress = modified_stress(embedding_i, embedding_j)\n",
+    "            modified_stress_matrix[i, j] = mod_stress\n",
+    "            modified_stress_matrix[j, i] = mod_stress"
    ],
    "metadata": {
     "collapsed": false
@@ -1249,13 +1260,20 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Create a heatmap from the stress matrix\n",
+    "# Visualize stress matrices for autoencoder realizations\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(adj_stress_matrix, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
-    "plt.title(\"Stress Matrix between Different Embeddings\")\n",
-    "plt.xlabel(\"Embedding Index\")\n",
-    "plt.ylabel(\"Embedding Index\")\n",
-    "plt.show()\n"
+    "sns.heatmap(adjusted_stress_matrix, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
+    "plt.title(\"Adjusted Stress Matrix between Different AE Realizations\")\n",
+    "plt.xlabel(\"Realization Index\")\n",
+    "plt.ylabel(\"Realization Index\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(modified_stress_matrix, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
+    "plt.title(\"Modified Stress Matrix between Different AE Realizations\")\n",
+    "plt.xlabel(\"Realization Index\")\n",
+    "plt.ylabel(\"Realization Index\")\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false
@@ -1485,8 +1503,44 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "anisotropy_dict = {\n",
+    "change_anisotropy_dict = {\n",
     "              'MVEE ': np.array(change_mvee_anis),\n",
     "              'Global ': np.array(change_global_anis),\n",
     "              'Arithmetic ': np.array(change_arith_anis),\n",
@@ -1494,7 +1548,7 @@
     "              'Geometric ': np.array(change_geo_anis)\n",
     "              }\n",
     "\n",
-    "box_plot(dictionary=anisotropy_dict, var_name='Anisotropies', value_name='Anisotropy', save_title='Anisotropy measures for all AE realizations')"
+    "box_plot(dictionary=change_anisotropy_dict, var_name='Anisotropies', value_name='Changes in Anisotropy (%)', save_title='Anisotropy measures for all AE realizations')"
    ],
    "metadata": {
     "collapsed": false
@@ -1512,7 +1566,7 @@
     "              'Harmonic \\nAnisotropy': np.array(change_har_anis),\n",
     "              }\n",
     "\n",
-    "box_plot(dictionary=instability_dict, var_name='Reassignments', value_name='Instability Measures', save_title='Instability measures for all AE realizations',\n",
+    "box_plot(dictionary=instability_dict, var_name='Reassignments', value_name='Changes in Instability Measures (%)', save_title='Instability measures for all AE realizations',\n",
     "         box_width=0.6)"
    ],
    "metadata": {
